--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,6 +1,6 @@
 <resources>
     <string name="app_name">GraphQLAndroid</string>
-    <string name="AUTH_TOKEN"> c794b76d10efb13c7795a2ab5b460c76694b3cfe</string>
+    <string name="AUTH_TOKEN">your_token</string>
 
     <string name="repository_name">Repository Name</string>
     <string name="owner_name_hint">Owner Name</string>
